tests/paczka1/fuzzy1/40036405.err
Error in line 1: b5OGA S785 20,0
Error in line 10: dnX S785 34,73
Error in line 5: j0gHCz S819 95,0
Error in line 12: j0gHCz A451 22,4
Error in line 30: PmXpGjhK A794 93,5
